removed editEntry from Month - see comment @ the code, added editEntry @ DayView

--- a/index.html
+++ b/index.html
@@ -3173,17 +3173,38 @@
 								</thead>
 								<tbody>
 									<tr>
-										<td>00:00</td>
+										<td rowspan="3">00:00</td>
 										<td class="show-grid" style="padding:0px">
 											<div class = "span2" style="width:100%;margin-left:0px;margin-right:0px;border-radius:0px;line-height:35px;text-align:left;" >
 											<div class="addButtonContainer" style="width:10%;float:left">
-													<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
+													<a href="#editRecord" data-toggle="modal"><img class="editBild" src="img/edit.png" hidden></a>&nbsp;
 											</div>
 											<div>
-														 50,20 &euro;, some drinks @ the bar 
+														 <p><font class="moneynegative">50,20 &euro;</font>, some drinks @ the bar </p>
 											</div>
 											</div>
-										</td>	
+										</td>
+									</tr>
+									<tr>
+										<td class="show-grid" style="padding:0px">
+											<div class = "span2" style="width:100%;margin-left:0px;margin-right:0px;border-radius:0px;line-height:35px;text-align:left;" >
+											<div class="addButtonContainer" style="width:10%;float:left">
+													<a href="#editRecord" data-toggle="modal"><img class="editBild" src="img/edit.png" hidden></a>&nbsp;
+											</div>
+											<div>
+														 <p><font class="moneynegative">70,40 &euro;</font>, more drinks @ the bar </p>
+											</div>
+											</div>
+										</td>
+									</tr>
+									<tr>
+										<td class="show-grid" style="padding:0px"> 
+											<div class = "span2" style="width:100%;margin-left:0px;margin-right:0px;border-radius:0px;line-height:35px;text-align:left;background-color:#FFFFFF" >
+													<div class="addButtonContainer" style="width:10%;float:left">
+														<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
+													</div>
+											</div>
+										</td>
 									</tr>
 									<tr>
 										<td>01:00</td>
@@ -3256,17 +3277,26 @@
 										</td>
 									</tr>
 									<tr>
-										<td>08:00</td>
+										<td rowspan="2">08:00</td>
 										<td class="show-grid" style="padding:0px">
 											<div class = "span2" style="width:100%;margin-left:0px;margin-right:0px;border-radius:0px;line-height:35px;text-align:left;" >
 											<div class="addButtonContainer" style="width:10%;float:left">
-													<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
+													<a href="#editRecord" data-toggle="modal"><img class="editBild" src="img/edit.png" hidden></a>&nbsp;
 											</div>
 											<div>
-														 500 &euro;, Table; willhaben.at  
+														 <p><font class="moneynegative">-500 &euro;</font>, Table; willhaben.at</p>
 											</div>
 											</div>
 										</td>	
+									</tr>
+									<tr>
+										<td class="show-grid" style="padding:0px"> 
+											<div class = "span2" style="width:100%;margin-left:0px;margin-right:0px;border-radius:0px;line-height:35px;text-align:left;background-color:#FFFFFF" >
+													<div class="addButtonContainer" style="width:10%;float:left">
+													<a href="#newRecord" data-toggle="modal"><img class="plusBild" src="img/add.png" hidden></a>&nbsp;
+													</div>
+											</div>
+										</td>
 									</tr>
 									<tr>
 										<td>09:00</td>
