added legend in evaluation

--- a/index.html
+++ b/index.html
@@ -3647,27 +3647,30 @@
 						</div>
 					</div>
 					<div class="container" style="padding:50px 0px">
-					<div style="width:90%;float:left;margin:0;padding:0">
-						<div style="float:left;height:430px;margin:0;padding:0;background-color:#000000">
-							<img src="img/tu_fp/evaluation/bardiagram-left.png" style="float:left;height:430px;margin:0;padding:0" />
-						</div>
-						<div class="span2" style="width:90%;height:430px;margin:0;padding:0">
-							<div class="statisticsspace">
-								<div class="statisticsbarup" style="background-color:#aaaaee;height:180px;left:10px" hidden>Salary</div>
-								<div class="statisticsbarup" style="background-color:#ffaaaa;height:30px;left:310px" hidden>Insurances
-									<div class="statisticsbarup" style="background-color:#2173fa;height:10px" hidden></div>
+						<div style="width:70%;float:left;margin:0;padding:0">
+							<div style="float:left;height:430px;margin:0;padding:0;background-color:#000000">
+								<img src="img/tu_fp/evaluation/bardiagram-left.png" style="float:left;height:430px;margin:0;padding:0" />
+							</div>
+							<div class="span2" style="width:90%;height:430px;margin:0;padding:0">
+								<div class="statisticsspace">
+									<div class="statisticsbarup" style="background-color:#bfe9ff;height:180px;left:10px" hidden><p style="color:#000000;">Salary</p></div>
+									<div class="statisticsbarup" style="background-color:#ffaaaa;height:30px;left:310px" hidden><p style="color:#000000;">Insurances</p>
+										<div class="statisticsbarup" style="background-color:#2173fa;height:10px" hidden></div>
+									</div>
+								</div>
+								<div style="background-color:#000000;width:90%;height:3px"></div>
+								<div class="statisticsspace">
+									<div class="statisticsbardown" style="background-color:#99ff99;height:30px;left:110px" hidden><p style="color:#000000;">Rent</p></div>
+									<div class="statisticsbardown" style="background-color:#ffbc2d;height:15px;left:210px" hidden><p style="color:#000000;">Car</p></div>
+									<div class="statisticsbardown" style="background-color:#ff9999;height:18px;left:310px" hidden></div>
+									<div class="statisticsbardown" style="background-color:#c270a3;height:60px;left:410px" hidden><p style="color:#000000;">Common</p></div>
+									<div class="statisticsbardown" style="background-color:#f7f945;height:17px;left:510px" hidden><p style="color:#000000;">Energy</p></div>
+								</div>
+								<div class="container" style="float:left;position:absolute;bottom:0">
+									<img id="statistics-image" src="img/tu_fp/evaluation/bardiagram-legend.png" style="padding:0px 0px;float:left" />
 								</div>
 							</div>
-							<div style="background-color:#000000;width:80%;height:3px"></div>
-							<div class="statisticsspace">
-								<div class="statisticsbardown" style="background-color:#99ff99;height:30px;left:110px" hidden>Rent</div>
-								<div class="statisticsbardown" style="background-color:#99eeee;height:15px;left:210px" hidden>Car</div>
-								<div class="statisticsbardown" style="background-color:#ff9999;height:18px;left:310px" hidden></div>
-								<div class="statisticsbardown" style="background-color:#924083;height:60px;left:410px" hidden>Common</div>
-								<div class="statisticsbardown" style="background-color:#f7f945;height:17px;left:510px" hidden>Energy</div>
-							</div>
 						</div>
-					</div>
 					</div>
 				</div>
 			</div>
