bugfixes @ current-viewing-info

--- a/index.html
+++ b/index.html
@@ -3571,6 +3571,14 @@
 						</div>
 					</div>
 				</div>
+			<div id="currentperiodinfo" class="container" style="width:15%;clear:none;float:left;position:relative;padding-left:10px">
+				<div class="spacer100" style="position:absolute;bottom:0;height:50%;top:90px">
+					<p><font style="font-weight: bold" id="currentperiodinfotitle">viewing month</font><br />
+					total income:<font id="currentperiodinfomoneypos" class="moneypositive"> 1972,52&euro;</font><br />
+					total spendings:<font id="currentperiodinfomoneyneg" class="moneynegative"> 1598,32&euro;</font><br />
+					saldo:<font id="currentperiodinfomoneysaldo" class="moneypositive"> 374,20&euro;</font></p>
+				</div>
+			</div>
 			</div>
 		
 			<div class="tab-pane" id="tu_fp_evaluation_content">
@@ -3672,15 +3680,6 @@
 							</div>
 						</div>
 					</div>
-				</div>
-			</div>
-	
-			<div id="currentperiodinfo" class="container" style="width:15%;clear:none;float:left;position:relative;padding-left:10px">
-				<div class="spacer100" style="position:absolute;bottom:0;height:50%;top:90px">
-					<p><font style="font-weight: bold" id="currentperiodinfotitle">viewing month</font><br />
-					total income:<font id="currentperiodinfomoneypos" class="moneypositive"> 1972,52&euro;</font><br />
-					total spendings:<font id="currentperiodinfomoneyneg" class="moneynegative"> 1598,32&euro;</font><br />
-					saldo:<font id="currentperiodinfomoneysaldo" class="moneypositive"> 374,20&euro;</font></p>
 				</div>
 			</div>
 		
@@ -3820,7 +3819,7 @@
 			
 						<div class="form-actions">
 							<button type="submit" class="btn btn-primary">Save changes</button>
-							<button type="button" class="btn">Close</button>
+							<button type="button" class="btn">Cancel</button>
 						</div>
 					
 				<!-- </form> -->
