no more text in week-view

--- a/index.html
+++ b/index.html
@@ -574,7 +574,7 @@
 															<div style="width:50%;float:left;line-height:20px">
 																&nbsp;
 															</div>
-															<p style="margin:0px;line-height:20px"><font class="moneynegative">&euro;50,20</font> drinks @ the bar </p>
+															<p style="margin:0px;line-height:20px"><font class="moneynegative">&euro;50,20</font></p>
 														</div>
 													</div>
 												</div>
@@ -697,7 +697,7 @@
 															<div style="width:50%;float:left;line-height:20px">
 																&nbsp;
 															</div>
-															<p style="margin:0px;line-height:20px"><font class="moneynegative">&euro;3,00</font> red bull @ bar </p>
+															<p style="margin:0px;line-height:20px"><font class="moneynegative">&euro;3,00</font></p>
 														</div>
 													</div>
 												</div>
@@ -1438,7 +1438,7 @@
 															<div style="width:50%;float:left;line-height:20px">
 																&nbsp;
 															</div>
-															<p style="margin:0px;line-height:20px"><font class="moneynegative">&euro;3,23</font> buying breakfast </p>
+															<p style="margin:0px;line-height:20px"><font class="moneynegative">&euro;3,23</font></p>
 														</div>
 													</div>
 												</div>
@@ -1453,7 +1453,7 @@
 															<div style="width:50%;float:left;line-height:20px">
 																&nbsp;
 															</div>
-															<p class="todaymarkedweak" style="margin:0px;line-height:20px"><font class="moneynegative">&euro;4,93</font> buying breakfast </p>
+															<p class="todaymarkedweak" style="margin:0px;line-height:20px"><font class="moneynegative">&euro;4,93</font></p>
 														</div>
 													</div>
 												</div>
@@ -1669,7 +1669,7 @@
 															<div style="width:50%;float:left;line-height:20px">
 																&nbsp;
 															</div>
-															<p class="todaymarkedweak" style="margin:0px;line-height:20px"><font class="moneynegative">&euro;0,50</font> coffee </p>
+															<p class="todaymarkedweak" style="margin:0px;line-height:20px"><font class="moneynegative">&euro;0,50</font></p>
 														</div>
 													</div>
 												</div>
@@ -1885,7 +1885,7 @@
 															<div style="width:50%;float:left;line-height:20px">
 																&nbsp;
 															</div>
-															<p class="todaymarkedweak" style="margin:0px;line-height:20px"><font class="moneynegative">&euro;11,20</font> lunch </p>
+															<p class="todaymarkedweak" style="margin:0px;line-height:20px"><font class="moneynegative">&euro;11,20</font></p>
 														</div>
 													</div>
 												</div>
@@ -1978,7 +1978,7 @@
 															<div style="width:50%;float:left;line-height:20px">
 																&nbsp;
 															</div>
-															<p style="margin:0px;line-height:20px"><font class="moneynegative">&euro;13,70</font> lunch</p>
+															<p style="margin:0px;line-height:20px"><font class="moneynegative">&euro;13,70</font></p>
 														</div>
 													</div>
 												</div>
@@ -2302,7 +2302,7 @@
 															<div style="width:50%;float:left;line-height:20px">
 																&nbsp;
 															</div>
-															<p style="margin:0px;line-height:20px"><font class="moneynegative">&euro;16,72</font> shopping</p>
+															<p style="margin:0px;line-height:20px"><font class="moneynegative">&euro;16,72</font></p>
 														</div>
 													</div>
 												</div>
