--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 	</div>
 
 	<div class="container" id="wrapper" style="width:90%">
-		<div style="width:90%;float:right">
+		<div style="width:90%">
 		<div class="container tab-content" id="tu_fp_global_container" style="float:left;width:80%">
 			<div class="tab-pane active" id="tu_fp_home_content" style="width:100%">
 				<div style="width:80%;float:left">
