--- a/index.html
+++ b/index.html
@@ -4036,12 +4036,20 @@
 					<div class="controls">
 						<textarea rows="5" id="inputDescription" placeholder="Description"></textarea>
 					</div>
-				</div>
-				<div class="control-group">
-					<label class="control-label" for="inputTime">Time:</label>
-					<div class="controls">
-						<div style="width:100%">
-							<div class="slider"></div>
+					<div class="control-group">
+						<label class="control-label" for="inputDate">Date:</label>
+						<div class="controls">
+							<div style="width:100%">
+								<input name="inputDate" class="date" placeholder="01/01/2013">
+							</div>
+						</div>
+					</div>
+					<div class="control-group">
+						<label class="control-label" for="inputTime">Time:</label>
+						<div class="controls">
+							<div style="width:100%">
+								<div class="slider"></div>
+							</div>
 						</div>
 					</div>
 				</div>
@@ -4143,18 +4151,20 @@
 					<div class="controls">
 						<input type="text" value="200"/>
 					</div>
-				</div>
-				<div class="control-group">
-					<label class="control-label" for="inputDescription">Name / Description:</label>
-					<div class="controls">
-						<textarea rows="5">Playstation 4</textarea>
+					<div class="control-group">
+						<label class="control-label" for="inputDate">Date:</label>
+						<div class="controls">
+							<div style="width:100%">
+								<input name="inputDate" class="date" placeholder="01/01/2013">
+							</div>
+						</div>
 					</div>
-				</div>
-				<div class="control-group">
-					<label class="control-label" for="inputTime">Time:</label>
-					<div class="controls">
-						<div style="width:100%">
-							<div class="slider"></div>
+					<div class="control-group">
+						<label class="control-label" for="inputTime">Time:</label>
+						<div class="controls">
+							<div style="width:100%">
+								<div class="slider"></div>
+							</div>
 						</div>
 					</div>
 				</div>
