Centered time navigation component

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 		float: none;
 	}
 	#header div {
-		width: 50%;
+		width: 40%;
 	}
 	
 	.tab-content {
@@ -107,7 +107,7 @@
 								<li class="active"><a href="#month" data-toggle="tab">Month</a></li>
 							</ul>
 						</div>
-						<div class="pull-left">
+						<div class="pull-left" style="width:60%">
 							<ul class="nav nav-pills pull-left myTab" style="margin:0px">
 								<li><a href="#" id="prevMonth">&lt;</a></li>
 								<li><a href="#" id="today">Today</a></li>
