--- a/index.html
+++ b/index.html
@@ -3585,6 +3585,16 @@
 						</div>
 					</div>
 				</div>
+				<div class="container" style="width:10%;clear:none;float:left;position:relative">
+					<div class="spacer100 akkupositivspace" style="width:100%">
+						<div class="spacer100 akkupositivspace" style="position:absolute;bottom:0;height:50%">
+							<p style="position:absolute;bottom:70%;text-align:center"><b>current money status</b></p>
+							<div class="spacer100 akkupositiv" style="height:70%;width:50%;left:15%" hidden><p class="akkuvalue">800&euro;</p></div>
+						</div>
+					</div>
+					<div class="spacer100 akkuline" style="position:absolute;margin:0 auto;float:none; left: 5%"></div>
+					<div class="spacer100 akkunegativ" hidden><p class="akkuvalue">800&euro;</p></div>
+				</div>
 				<div id="currentperiodinfo" class="container" style="width:20%;clear:none;float:left;position:relative;padding-left:10px">
 					<div class="spacer100" style="position:absolute;bottom:0;height:50%;top:90px">
 						<p><font style="font-weight: bold" id="currentperiodinfotitle">current month</font><br />
@@ -3848,16 +3858,6 @@
 					
 				<!-- </form> -->
 			</div>
-		</div>
-		<div class="container" style="width:10%;clear:none;float:right;position:relative">
-			<div class="spacer100 akkupositivspace" style="width:100%">
-				<div class="spacer100 akkupositivspace" style="position:absolute;bottom:0;height:50%">
-					<p style="position:absolute;bottom:70%;text-align:center"><b>current money status</b></p>
-					<div class="spacer100 akkupositiv" style="height:70%;width:50%;left:15%" hidden><p class="akkuvalue">800&euro;</p></div>
-				</div>
-			</div>
-			<div class="spacer100 akkuline" style="position:absolute;margin:0 auto;float:none; left: 5%"></div>
-			<div class="spacer100 akkunegativ" hidden><p class="akkuvalue">800&euro;</p></div>
 		</div>
 	</div>
 		
