minor major beauty fix for whole page

--- a/index.html
+++ b/index.html
@@ -94,8 +94,8 @@
 		</div>
 	</div>
 
-	<div class="container" id="wrapper" style="width:92%">
-		<div style="width:100%">
+	<div class="container" id="wrapper">
+		
 		<div class="container tab-content" id="tu_fp_global_container" style="float:left;width:80%">
 			<div class="tab-pane active" id="tu_fp_home_content" style="width:100%">
 				<div style="width:75%;float:left">
@@ -3858,7 +3858,7 @@
 					
 				<!-- </form> -->
 			</div>
-		</div>
+		
 	</div>
 		
 	<div class="container" id="tu_fp_search_content" style="width:80%; display:none; float:left">
