Fixed layout bug

--- a/index.html
+++ b/index.html
@@ -3176,8 +3176,8 @@
 										<td class="show-grid" style="padding:0px">
 											<div class = "span2" style="width:100%;margin-left:0px;margin-right:0px;border-radius:0px;line-height:35px;text-align:left;" >
 											<div class="addButtonContainer" style="width:10%;float:left">
-													<a href="#editRecord" data-toggle="modal"><img class="editBild" src="img/edit.png" hidden></a>
-													<a href="#deleteRecord"><img class="deleteBild" src="img/delete.png" hidden></a>&nbsp;
+													<a href="#editRecord" data-toggle="modal"><img width="28px" height="28px" class="editBild" src="img/edit.png" hidden></a>
+													<a href="#deleteRecord"><img class="deleteBild" width="28px" height="28px"  src="img/delete.png" hidden></a>&nbsp;
 											</div>
 											<div>
 														 <p><font class="moneynegative">50.20 &euro;</font>, some drinks @ the bar </p>
@@ -3189,8 +3189,8 @@
 										<td class="show-grid" style="padding:0px">
 											<div class = "span2" style="width:100%;margin-left:0px;margin-right:0px;border-radius:0px;line-height:35px;text-align:left;" >
 											<div class="addButtonContainer" style="width:10%;float:left">
-													<a href="#editRecord" data-toggle="modal"><img class="editBild" src="img/edit.png" hidden></a>
-													<a href="#deleteRecord"><img class="deleteBild" src="img/delete.png" hidden></a>&nbsp;
+													<a href="#editRecord" data-toggle="modal"><img width="28px" height="28px" class="editBild" src="img/edit.png" hidden></a>
+													<a href="#deleteRecord"><img class="deleteBild" width="28px" height="28px"  src="img/delete.png" hidden></a>&nbsp;
 											</div>
 											<div>
 														 <p><font class="moneynegative">70.40 &euro;</font>, more drinks @ the bar </p>
