Implemented deletion for last entry in day-view

--- a/index.html
+++ b/index.html
@@ -3282,7 +3282,8 @@
 										<td class="show-grid" style="padding:0px">
 											<div class = "span2" style="width:100%;margin-left:0px;margin-right:0px;border-radius:0px;line-height:35px;text-align:left;" >
 											<div class="addButtonContainer" style="width:10%;float:left">
-													<a href="#editRecord" data-toggle="modal"><img class="editBild" src="img/edit.png" hidden></a>&nbsp;
+												<a href="#editRecord" data-toggle="modal"><img width="28px" height="28px" class="editBild" src="img/edit.png" hidden></a>
+												<a href="#deleteRecord"><img class="deleteBild" width="28px" height="28px"  src="img/delete.png" hidden></a>&nbsp;
 											</div>
 											<div>
 														 <p><font class="moneynegative">-500 &euro;</font>, Table; willhaben.at</p>
