Implemented delete function for tables

--- a/index.html
+++ b/index.html
@@ -3460,7 +3460,7 @@
 									<table id="tableview_table" class="table table-bordered dataTable table-hover" cellspacing="0" cellpadding="0" border="0" aria-describedby="example_info">
 										<thead>
 											<tr role="row">
-												<th width="25px" tabindex="0" rowspan="1" colspan="1">&nbsp;</th>
+												<th width="50px" tabindex="0" rowspan="1" colspan="1">&nbsp;</th>
 												<th class="sorting_asc" role="columnheader" tabindex="0" aria-controls="example" rowspan="1" colspan="1" aria-sort="ascending" aria-label="Date: activate to sort column descending">Date</th>
 												<th class="sorting" role="columnheader" tabindex="0" aria-controls="example" rowspan="1" colspan="1" aria-label="Time: activate to sort column ascending">Time</th>
 												<th class="sorting" role="columnheader" tabindex="0" aria-controls="example" rowspan="1" colspan="1" aria-label="Value: activate to sort column ascending">Value</th>
@@ -3470,7 +3470,10 @@
 										</thead>
 										<tbody role="alert" aria-live="polite" aria-relevant="all">
 											<tr class="row_bg gradeA odd success" data-toggle="modal">
-												<td><a href="#editRecord" data-toggle="modal"><img class="editBild" height="16px" width="16px" src="img/edit.png" hidden></a></td>
+												<td>
+													<a href="#editRecord" data-toggle="modal"><img class="editBild" height="16px" width="16px" src="img/edit.png" hidden></a>
+													<a href="#deleteRecord"><img class="deleteBild" height="16px" width="16px" src="img/delete.png" hidden></a>
+												</td>
 												<td class="sorting_1">01.12.2012</td>
 												<td class=" ">08:00</td>
 												<td class=" ">3500&euro;</td>
@@ -3478,7 +3481,10 @@
 												<td class="center ">Salary</td>
 											</tr>
 											<tr class="row_bg gradeA odd info " data-toggle="modal">
-												<td><a href="#editRecord" data-toggle="modal"><img class="editBild" height="16px" width="16px" src="img/edit.png" hidden></a></td>
+												<td>
+													<a href="#editRecord" data-toggle="modal"><img class="editBild" height="16px" width="16px" src="img/edit.png" hidden></a>
+													<a href="#deleteRecord"><img class="deleteBild" height="16px" width="16px" src="img/delete.png" hidden></a>
+												</td>
 												<td class="sorting_1">03.12.2012</td>
 												<td class=" ">08:00</td>
 												<td class=" ">-200&euro;</td>
@@ -3486,7 +3492,10 @@
 												<td class="center ">IT</td>
 											</tr>
 											<tr class="row_bg gradeA even " data-toggle="modal">
-												<td><a href="#editRecord" data-toggle="modal"><img class="editBild" height="16px" width="16px" src="img/edit.png" hidden></a></td>
+												<td>
+													<a href="#editRecord" data-toggle="modal"><img class="editBild" height="16px" width="16px" src="img/edit.png" hidden></a>
+													<a href="#deleteRecord"><img class="deleteBild" height="16px" width="16px" src="img/delete.png" hidden></a>
+												</td>
 												<td class="sorting_1">05.12.2012</td>
 												<td class=" ">17:00</td>
 												<td class=" ">-105&euro;</td>
@@ -3494,7 +3503,10 @@
 												<td class="center ">Music</td>
 											</tr>
 											<tr class="row_bg gradeA odd " data-toggle="modal">
-												<td><a href="#editRecord" data-toggle="modal"><img class="editBild" height="16px" width="16px" src="img/edit.png" hidden></a></td>
+												<td>
+													<a href="#editRecord" data-toggle="modal"><img class="editBild" height="16px" width="16px" src="img/edit.png" hidden></a>
+													<a href="#deleteRecord"><img class="deleteBild" height="16px" width="16px" src="img/delete.png" hidden></a>
+												</td>
 												<td class="sorting_1">07.12.2012</td>
 												<td class=" ">08:00</td>
 												<td class=" ">-35&euro;</td>
@@ -3502,7 +3514,10 @@
 												<td class="center ">Food</td>
 											</tr>
 											<tr class="row_bg gradeA even " data-toggle="modal">
-												<td><a href="#editRecord" data-toggle="modal"><img class="editBild" height="16px" width="16px" src="img/edit.png" hidden></a></td>
+												<td>
+													<a href="#editRecord" data-toggle="modal"><img class="editBild" height="16px" width="16px" src="img/edit.png" hidden></a>
+													<a href="#deleteRecord"><img class="deleteBild" height="16px" width="16px" src="img/delete.png" hidden></a>
+												</td>
 												<td class="sorting_1">07.12.2012</td>
 												<td class=" ">17:00</td>
 												<td class=" ">-350&euro;</td>
@@ -3510,7 +3525,10 @@
 												<td class="center ">Misc</td>
 											</tr>
 											<tr class="gradeA odd row_bg" data-toggle="modal">
-												<td><a href="#editRecord" data-toggle="modal"><img class="editBild" height="16px" width="16px" src="img/edit.png" hidden></a></td>
+												<td>
+													<a href="#editRecord" data-toggle="modal"><img class="editBild" height="16px" width="16px" src="img/edit.png" hidden></a>
+													<a href="#deleteRecord"><img class="deleteBild" height="16px" width="16px" src="img/delete.png" hidden></a>
+												</td>
 												<td class="sorting_1">07.12.2012</td>
 												<td class=" ">08:00</td>
 												<td class=" ">-48&euro;</td>
@@ -3518,7 +3536,10 @@
 												<td class="center ">Present</td>
 											</tr>
 												<tr class="gradeA odd row_bg" data-toggle="modal">
-												<td><a href="#editRecord" data-toggle="modal"><img class="editBild" height="16px" width="16px" src="img/edit.png" hidden></a></td>
+													<td>
+														<a href="#editRecord" data-toggle="modal"><img class="editBild" height="16px" width="16px" src="img/edit.png" hidden></a>
+														<a href="#deleteRecord"><img class="deleteBild" height="16px" width="16px" src="img/delete.png" hidden></a>
+													</td>
 												<td class="sorting_1">07.12.2012</td>
 												<td class=" ">17:00</td>
 												<td class=" ">-10&euro;</td>
@@ -3526,7 +3547,10 @@
 												<td class="center ">Food</td>
 											</tr>
 											<tr class="gradeA odd row_bg" data-toggle="modal">
-												<td><a href="#editRecord" data-toggle="modal"><img class="editBild" height="16px" width="16px" src="img/edit.png" hidden></a></td>
+												<td>
+													<a href="#editRecord" data-toggle="modal"><img class="editBild" height="16px" width="16px" src="img/edit.png" hidden></a>
+													<a href="#deleteRecord"><img class="deleteBild" height="16px" width="16px" src="img/delete.png" hidden></a>
+												</td>
 												<td class="sorting_1">07.12.2012</td>
 												<td class=" ">08:00</td>
 												<td class=" ">-16&euro;</td>
@@ -3534,7 +3558,10 @@
 												<td class="center ">Misc</td>
 											</tr>
 											<tr class="gradeA odd info row_bg" data-toggle="modal">
-												<td><a href="#editRecord" data-toggle="modal"><img class="editBild" height="16px" width="16px" src="img/edit.png" hidden></a></td>
+												<td>
+													<a href="#editRecord" data-toggle="modal"><img class="editBild" height="16px" width="16px" src="img/edit.png" hidden></a>
+													<a href="#deleteRecord"><img class="deleteBild" height="16px" width="16px" src="img/delete.png" hidden></a>
+												</td>
 												<td class="sorting_1">07.12.2012</td>
 												<td class=" ">08:00</td>
 												<td class=" ">-90&euro;</td>
@@ -3542,7 +3569,10 @@
 												<td class="center ">IT</td>
 											</tr>
 											<tr class="gradeA even row_bg" data-toggle="modal">
-												<td><a href="#editRecord" data-toggle="modal"><img class="editBild" height="16px" width="16px" src="img/edit.png" hidden></a></td>
+												<td>
+													<a href="#editRecord" data-toggle="modal"><img class="editBild" height="16px" width="16px" src="img/edit.png" hidden></a>
+													<a href="#deleteRecord"><img class="deleteBild" height="16px" width="16px" src="img/delete.png" hidden></a>
+												</td>
 												<td class="sorting_1">07.12.2012</td>
 												<td class=" ">17:00</td>
 												<td class=" ">-71&euro;</td>
@@ -3550,7 +3580,10 @@
 												<td class="center ">Misc</td>
 											</tr>
 											<tr class="gradeA odd row_bg" data-toggle="modal">
-												<td><a href="#editRecord" data-toggle="modal"><img class="editBild" height="16px" width="16px" src="img/edit.png" hidden></a></td>
+												<td>
+													<a href="#editRecord" data-toggle="modal"><img class="editBild" height="16px" width="16px" src="img/edit.png" hidden></a>
+													<a href="#deleteRecord"><img class="deleteBild" height="16px" width="16px" src="img/delete.png" hidden></a>
+												</td>
 												<td class="sorting_1">07.12.2012</td>
 												<td class=" ">08:00</td>
 												<td class=" ">-24&euro;</td>
@@ -3558,7 +3591,10 @@
 												<td class="center ">Misc</td>
 											</tr>
 											<tr class="gradeA even info row_bg" data-toggle="modal">
-												<td><a href="#editRecord" data-toggle="modal"><img class="editBild" height="16px" width="16px" src="img/edit.png" hidden></a></td>
+												<td>
+													<a href="#editRecord" data-toggle="modal"><img class="editBild" height="16px" width="16px" src="img/edit.png" hidden></a>
+													<a href="#deleteRecord"><img class="deleteBild" height="16px" width="16px" src="img/delete.png" hidden></a>
+												</td>
 												<td class="sorting_1">07.12.2012</td>
 												<td class=" ">17:00</td>
 												<td class=" ">-47&euro;</td>
@@ -3566,7 +3602,10 @@
 												<td class="center ">IT</td>
 											</tr>
 											<tr class="gradeA odd row_bg" data-toggle="modal">
-												<td><a href="#editRecord" data-toggle="modal"><img class="editBild" height="16px" width="16px" src="img/edit.png" hidden></a></td>
+												<td>
+													<a href="#editRecord" data-toggle="modal"><img class="editBild" height="16px" width="16px" src="img/edit.png" hidden></a>
+													<a href="#deleteRecord"><img class="deleteBild" height="16px" width="16px" src="img/delete.png" hidden></a>
+												</td>
 												<td class="sorting_1">08.12.2012</td>
 												<td class=" ">08:00</td>
 												<td class=" ">-1&euro;</td>
@@ -3574,7 +3613,10 @@
 												<td class="center ">Food</td>
 											</tr>
 											<tr class="gradeA even info row_bg" data-toggle="modal">
-												<td><a href="#editRecord" data-toggle="modal"><img class="editBild" height="16px" width="16px" src="img/edit.png" hidden></a></td>
+												<td>
+													<a href="#editRecord" data-toggle="modal"><img class="editBild" height="16px" width="16px" src="img/edit.png" hidden></a>
+													<a href="#deleteRecord"><img class="deleteBild" height="16px" width="16px" src="img/delete.png" hidden></a>
+												</td>
 												<td class="sorting_1">08.12.2012</td>
 												<td class=" ">08:00</td>
 												<td class=" ">-63&euro;</td>
