Implemented delte function for week-view

--- a/index.html
+++ b/index.html
@@ -571,8 +571,8 @@
 															<div class="addButtonContainer" style="width:50%;float:left;line-height:20px">
 																<a href="#editRecord" data-toggle="modal"><img class="editBild" src="img/edit.png" width="16px" height="16px" hidden></a>&nbsp;
 															</div>
-															<div style="width:50%;float:left;line-height:20px">
-																&nbsp;
+															<div style="width:50%;float:left;line-height:20px" class="addButtonContainer">
+																<a href="#deleteRecord"><img class="deleteBild" src="img/delete.png" width="16px" height="16px" hidden></a>&nbsp;
 															</div>
 															<p style="margin:0px;line-height:20px"><font class="moneynegative">&euro;50.20</font></p>
 														</div>
@@ -694,8 +694,8 @@
 															<div class="addButtonContainer" style="width:50%;float:left;line-height:20px">
 																<a href="#editRecord" data-toggle="modal"><img class="editBild" src="img/edit.png" width="16px" height="16px" hidden></a>&nbsp;
 															</div>
-															<div style="width:50%;float:left;line-height:20px">
-																&nbsp;
+															<div style="width:50%;float:left;line-height:20px" class="addButtonContainer">
+																<a href="#deleteRecord"><img class="deleteBild" src="img/delete.png" width="16px" height="16px" hidden></a>&nbsp;
 															</div>
 															<p style="margin:0px;line-height:20px"><font class="moneynegative">&euro;3.00</font></p>
 														</div>
@@ -1435,8 +1435,8 @@
 															<div class="addButtonContainer" style="width:50%;float:left;line-height:20px">
 																<a href="#editRecord" data-toggle="modal"><img class="editBild" src="img/edit.png" width="16px" height="16px" hidden></a>&nbsp;
 															</div>
-															<div style="width:50%;float:left;line-height:20px">
-																&nbsp;
+															<div style="width:50%;float:left;line-height:20px" class="addButtonContainer">
+																<a href="#deleteRecord"><img class="deleteBild" src="img/delete.png" width="16px" height="16px" hidden></a>&nbsp;
 															</div>
 															<p style="margin:0px;line-height:20px"><font class="moneynegative">&euro;3.23</font></p>
 														</div>
@@ -1450,8 +1450,8 @@
 															<div class="addButtonContainer" style="width:50%;float:left;line-height:20px">
 																<a href="#editRecord" data-toggle="modal"><img class="editBild" src="img/edit.png" width="16px" height="16px" hidden></a>&nbsp;
 															</div>
-															<div style="width:50%;float:left;line-height:20px">
-																&nbsp;
+															<div style="width:50%;float:left;line-height:20px" class="addButtonContainer">
+																<a href="#deleteRecord"><img class="deleteBild" src="img/delete.png" width="16px" height="16px" hidden></a>&nbsp;
 															</div>
 															<p class="todaymarkedweak" style="margin:0px;line-height:20px"><font class="moneynegative">&euro;4.93</font></p>
 														</div>
@@ -1666,8 +1666,8 @@
 															<div class="addButtonContainer" style="width:50%;float:left;line-height:20px">
 																<a href="#editRecord" data-toggle="modal"><img class="editBild" src="img/edit.png" width="16px" height="16px" hidden></a>&nbsp;
 															</div>
-															<div style="width:50%;float:left;line-height:20px">
-																&nbsp;
+															<div style="width:50%;float:left;line-height:20px" class="addButtonContainer">
+																<a href="#deleteRecord"><img class="deleteBild" src="img/delete.png" width="16px" height="16px" hidden></a>&nbsp;
 															</div>
 															<p class="todaymarkedweak" style="margin:0px;line-height:20px"><font class="moneynegative">&euro;0.50</font></p>
 														</div>
@@ -1882,8 +1882,8 @@
 															<div class="addButtonContainer" style="width:50%;float:left;line-height:20px">
 																<a href="#editRecord" data-toggle="modal"><img class="editBild" src="img/edit.png" width="16px" height="16px" hidden></a>&nbsp;
 															</div>
-															<div style="width:50%;float:left;line-height:20px">
-																&nbsp;
+															<div style="width:50%;float:left;line-height:20px" class="addButtonContainer">
+																<a href="#deleteRecord"><img class="deleteBild" src="img/delete.png" width="16px" height="16px" hidden></a>&nbsp;
 															</div>
 															<p class="todaymarkedweak" style="margin:0px;line-height:20px"><font class="moneynegative">&euro;11.20</font></p>
 														</div>
@@ -1975,8 +1975,8 @@
 															<div class="addButtonContainer" style="width:50%;float:left;line-height:20px">
 																<a href="#editRecord" data-toggle="modal"><img class="editBild" src="img/edit.png" width="16px" height="16px" hidden></a>&nbsp;
 															</div>
-															<div style="width:50%;float:left;line-height:20px">
-																&nbsp;
+															<div style="width:50%;float:left;line-height:20px" class="addButtonContainer">
+																<a href="#deleteRecord"><img class="deleteBild" src="img/delete.png" width="16px" height="16px" hidden></a>&nbsp;
 															</div>
 															<p style="margin:0px;line-height:20px"><font class="moneynegative">&euro;13.70</font></p>
 														</div>
@@ -2299,8 +2299,8 @@
 															<div class="addButtonContainer" style="width:50%;float:left;line-height:20px">
 																<a href="#editRecord" data-toggle="modal"><img class="editBild" src="img/edit.png" width="16px" height="16px" hidden></a>&nbsp;
 															</div>
-															<div style="width:50%;float:left;line-height:20px">
-																&nbsp;
+															<div style="width:50%;float:left;line-height:20px" class="addButtonContainer">
+																<a href="#deleteRecord"><img class="deleteBild" src="img/delete.png" width="16px" height="16px" hidden></a>&nbsp;
 															</div>
 															<p style="margin:0px;line-height:20px"><font class="moneynegative">&euro;16.72</font></p>
 														</div>
