--- a/index.html
+++ b/index.html
@@ -3633,7 +3633,7 @@
 				<div class="container" style="width:10%;clear:none;float:left;position:relative;padding-left:10px">
 					<div class="spacer100 akkupositivspace" style="width:100%">
 						<div class="spacer100 akkupositivspace" style="position:absolute;bottom:0;height:50%">
-							<p style="position:absolute;bottom:70%"><b>current money status</b></p>
+							<p style="position:absolute;bottom:70%;float:left"><b>current money status</b></p>
 							<div class="spacer100 akkupositiv" style="height:70%;width:50%;left:8%" hidden><p class="akkuvalue">800&euro;</p></div>
 						</div>
 					</div>
