Hopefully minor fix :-)

--- a/index.html
+++ b/index.html
@@ -3744,7 +3744,7 @@
 									<div class="statisticsbardown" style="background-color:#f7f945;height:17px;left:510px" hidden><p style="color:#000000;">Energy</p></div>
 								</div>
 								<div class="container" style="float:left;position:absolute;bottom:0">
-									<img id="statistics-image" src="img/tu_fp/evaluation/bardiagram-legend.png" style="padding:0px 0px;float:left" />
+									&nbsp;
 								</div>
 							</div>
 						</div>
@@ -4352,7 +4352,6 @@
 	<script type="text/javascript" src="js/extras.js"></script>
 	
 	<script type="text/javascript" src="js/tu_fp/tu_fp.js"></script>
-	<script type="text/javascript" src="js/tu_fp/tu_fp_custom.js"></script>
 	
 <!-- End Bootstrap JS-->
 
